--- a/index.html
+++ b/index.html
@@ -76,6 +76,22 @@
         <br>
         
     </main>
+<!---------- FOOTER-INICIO ---------->
+    <footer>
+        <h3>
+            Contact
+        </h3>
+        <p>NOT</p>
+        <p>adress</p>
+        <p>adress</p>
+
+        <p>Tel: (xx)xxxxx-xxxx</p>
+        <p><em>Email:</em> nightoperationtech@gmail.com</p>
+        <a href="https://www.instagram.com/night_operation_tech/" target="_blank">
+            <img src="imagens/logotipo-do-instagram.png" alt="logotipo do instagram que ao clicar será direcionado para a página do Instagram da equipe." style="width: 35px; height: 35px;">
+        </a>
+    </footer>
+<!---------- FOOTER-FIM ---------->
     
     <script src="./script.js"></script>
 </body>
